2003-05-21  Christian Groessler <chris@groessler.org>

	* expr.h: Fix comments in operatorT typedef.
	* config/tc-z8k.c: Add 2003 to copyright message.  
	Fold s_segm() and s_unseg() into one function s_segm(parm) which
	decides by the parameter.
	(md_begin): Don't set linkrelax.  Only set Z8002 default if no
	command line argument was given to select the intended
	architecure.
	(get_interrupt_operand): Warn if NOP type code is emitted.
	(newfix): New parameter 'size', forward it to 'fix_new_exp'.
	(apply_fix): Call newfix with additional 'size' parameter.
	(build_bytes): Remove unused variable 'nib'.  Detect overflow in
	4 bit immediate arguments.
	(md_longopts): Add 'linkrelax' option.
	(md_parse_option): Adapt to new s_segm function.  Set 'linkrelax'
	variable when 'linkrelax' command line option is specified.
	(md_show_usage): Display 'linkrelax' option.
	(md_apply_fix3): Fix cases R_IMM4L, R_JR, and R_IMM8.  Add cases
	R_CALLR and R_REL16.
	* config/tc-z8k.h: Undef WARN_SIGNED_OVERFLOW_WORD.

2003-04-30  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-hppa.c (hppa_symbol_chars): Revert 2003-04-28 change.
	* config/tc-hppa.h (tc_symbol_chars): Likewise.
	* config/tc-ppc.c (ppc_symbol_chars): Revert 2003-04-24 change.
	* config/tc-ppc.h (tc_symbol_chars): Likewise.
	* app.c (do_scrub_chars): Revert 2003-04-23 and 2003-04-22 changes.

2003-04-29  Nick Clifton  <nickc@redhat.com>

	* config/obj-elf.c (obj_elf_symver): Skip whitespace before the
	start of a version name.

2003-04-28  Chris Demetriou  <cgd@broadcom.com>

	* configure.in (mips-*-*n*bsd*): Replace with...
	(mips-*-netbsd*, mips-*-openbsd*): These.
	* configure: Regenerate.

2003-04-28  H.J. Lu <hjl@gnu.org>

	* config/tc-hppa.c (hppa_symbol_chars): New.
	* config/tc-hppa.h (tc_symbol_chars): Likewise.

2003-04-26  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.h (TC_FORCE_RELOCATION_SUB_SAME): Define again.

2003-04-25  Chris Demetriou  <cgd@broadcom.com>
